@@ -1,3 +1,8 @@
+2005-02-21  Mark Wielaard  <mark@klomp.org>
+
+	* java/util/jar/JarFile.java (verifyHashes): Check whether ZipEntry
+	exists.
+
 2005-02-21  Andrew Haley  <aph@redhat.com>
 
 	* Makefile.in: Rebuilt.
